[project]
name = "analysisbrand"
version = "0.1.0"
description = ""
authors = [
    {name = "Сергей",email = "ser-sud@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tabulate (>=0.9.0,<0.10.0)",
    "setuptools (>=80.9.0,<81.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "ruff (>=0.14.3,<0.15.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

